css/style.css
/* ... */
/*===================================
Hotspot
===================================*/


#hotspot {
	top: 0%;
}

.hotspot {
	width: 16em;
	line-height: 18px;
	text-align: left;
	position: absolute;
	border-radius: 5px;
	font: sans-serif;
}



.hotspot .empty-text {
	width: 100%;
	height: 100%;
}

.empty-text {
	font-family: "Balsamiq Sans", Arial, sans-serif;
	font-size: 1rem;
	margin-top: 1rem;
	text-align: center;
}

.hotspot .empty-text:hover {
	cursor: pointer;
}

.hover-popup {
	display: none;
	z-index: 1;
}

.hotspot.clicked {
	display: block;
}

.hotspot:hover .hover-popup,
.hotspot2:hover .hover-popup2 {
	display: block;
	position: absolute;
	padding: 1.5rem;
	top: 1rem;
	width: 18rem;
	height: 9rem;
	line-height: 1rem;
	text-align: center;
	background: white;
	opacity: 90%;
	position: absolute;
/*
	border-radius: 5px;
	border: 2px solid rgb(38, 38, 38);
*/
	font-family: san-serif;
	font-size: .75rem;
}

/*====================================
Features
====================================*/



#features,
#features2 {
	display: flex;
	column-gap: 0.75rem;
	height: 16rem;
	width: 80%;
	background-color: #fbf7f5;
	flex-direction: row;
}

#features,
#features2 {
	margin: 0 auto;
}

#features2 {
	margin-bottom: 5.5rem;
}
/*
#features2 {
	margin: .75rem auto .9rem auto;
}
*/
#features h2,
#features2 h2 {
	font-family: "Balsamiq Sans", Arial, sans-serif;
	text-align: left;
	margin-top: 2rem;
}

#features2 h2 {
	margin-top: 4rem;
}

.textOne a {
	color: blue;
}

.image-container {
	max-height: 13rem;
	margin: 0 auto;
	position: center;
	object-fit: fill;
	width: 100%;
	overflow: hidden;
	box-shadow: 4px 5px 2px gray;
	border-radius: 8px;
}

.feature img {
	display: flex;
	margin: 0 auto;
	object-fit: fill;
}

.feature video {
	display: flex;
	margin: 0 auto;
	object-fit: fill;
}

.image-container video {
	position: center;
	object-fit: fill;
	width: 100%;
	overflow: hidden;
	box-shadow: 4px 5px 2px gray;
	border-radius: 8px;
}

#features p,
#features2 p {
	width: 80%;
}

/*
#hotspot {
	left: 0%;
	top: 0%;
}
*/
/*
.hotspot {
	width: 12rem;
	height: 90px;
	line-height: 18px;
	text-align: center;
	position: absolute;
	border-radius: 5px;
	font: sans-serif;
}
*/
/*
.hotspot .empty-text {
	width: 100%;
	height: 100%;
}
*/
/*.empty-text {
	font-family: "Balsamiq Sans", Arial, sans-serif;
	font-size: 1rem;
	margin-top: 1rem;
	text-align: left;
}
*/
/*
.hotspot .empty-text:hover {
	cursor: pointer;
}

.hover-popup {
	display: none;
	z-index: 1;
}

.hotspot.clicked {
	display: block;
}

.hotspot:hover .hover-popup,
.hotspot2:hover .hover-popup2 {
	display: block;
	position: absolute;
	top: 0;
	/*
	width: 10rem;
	height: 11rem;
	*/
	/*
	line-height: 1rem;
	text-align: center;
	background-color: white;
	position: absolute;
	border-radius: 5px;
	border: 2px solid rgb(38, 38, 38);
	font-family: san-serif;
	font-size: .75rem;
}
*/

.row1,
.row2,
.row3,
.row4 {
	width: 100%;
}

@media only screen and (max-width: 1200px) {
	.hotspot {
		width: 12em;
	}
	
	.hotspot .empty-text {
		width: 100%;
		height: auto;
	}

	#features,
	#features2 {
		flex-direction: column;
		justify-content: space-between;
	}

	#features .feature.row2 h2 {
		padding-top: 8rem;
	}

	#features2 .feature.row3,
	#features2 .feature.row4 {
		margin-top: 9rem;
	}
}

/*
.hotspot {
	width: 10rem;
}

#features,
#features2 {
	width: 60%;
}
*/
@media only screen and (max-width: 420px) {
	#features
	#features2 {
		padding-top: 3rem;
}
}


.feature img {
	margin: auto;
	width: 100%;
}

.feature p {
	width: 100%;
}


/*===================================
Newsletter
===================================*/

#newsletter {
	background:white;
}

h2.newsletter-title {
	font-weight: bold;
	color: #401F51;
	font-size: 1.5rem;
	font-family: sans-serif;
	text-align: center;
}

.signupForm {
	display: flex;
	justify-content: center;
	align-items: center;
	height: 25rem;
}

.news-form {
	background-color: hsla(44, 48%, 95%, 85%);
	width: 45%;
	border-radius: 8px;
	padding: .5rem .5rem;
	box-shadow: 0 10px 25px rgba(92, 99, 105, .2);
	margin: 1rem 1rem 1rem 1rem;	
	border-radius: 1rem;
	border: 5px solid #454545;
}

.newsletter-title {
	font-size: .5rem;
}

.label {
	position: absolute;
	bottom: .65rem;
	margin-bottom: 1rem;
	padding: 0 4px 2px 4px;
	color: #0E151D;
	font-size: .8rem;
	font-family: sans-serif;
	font-weight: bold;
	left: 2rem;
}

.inputContainer {
	position: relative;
	height: 1.5rem;
	width: 75%;
	margin-bottom: 20px;
	margin-top: 2rem;
}

.input {
	position: absolute;
	top: 0px;
	left: 2rem;
	height: 100%;
	width: 100%;
	border: 1px solid black;
	border-radius: 7px;
	font-size: .75rem;
	padding: 0 20px;
	outline: none;
	background: none;
	z-index: 1;
	background-color: white;
}

::placeholder {
	color: black;
}

p.striking2 {
	display: inline-block;
	color: #1C1C1C;
	font-size: 1rem;
	font-weight: bold;
	margin-top: .05rem;
	margin-bottom: 0rem;
	margin-left: .15rem;
	text-align: center;
	width: 100%;
	border-style: none;
	padding-top: .8rem;
	padding-bottom: .5rem;
}	


.submitBtn {
	display: block;
	box-align: center;
	padding: .5rem 2rem;
	border: none;
	background-color: #0E151D;
	color: #F9F6EE;
	border-radius: .25rem;
	cursor: pointer;
	font-size: .5rem;
	margin-top: 1.5rem;
	margin-bottom: 1.5rem;
	box-shadow: 4px 5px 2px gray;
	margin-left: 2rem;
}

.submitBtn:hover {
	background-color: #454545;
	transform: translateY(-2px);
	color: #DFCEE4;
	font-weight: bold;
	text-decoration: none;
}


.submitBtn:hover a {
	color:#E4E0D8;
}


/*===================================
Footer
===================================*/

.page-footer {
	clear: both;
	background-color: #454545;
	width: 100%;
	margin: auto;
}

.page-footer-content {
	display: inline;
}

.copyright {
	border: none;
	display: block;
	position: absolute;
	float: left;
	font-size: .5rem;
	text-align: left;
	color: #F9F6EE;
	background-color: #454545;
	padding-top: 1.5rem;
	padding-left: 1.5rem;
}
/* ... */

